--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,8 +1,9 @@
 
 #noinst_HEADERS = 
 
-bin_PROGRAMS = blockip
+bin_PROGRAMS = blockip stream
 
 blockip_SOURCES = \
 main.cpp
 
+stream_SOURCES = stream.cpp
