--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,9 +1,12 @@
 
-#noinst_HEADERS = 
 
 bin_PROGRAMS = blockip stream
 
+noinst_HEADERS = \
+log.h
+
 blockip_SOURCES = \
+log.cpp \
 main.cpp
 
 stream_SOURCES = stream.cpp
